<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="12dp"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/hasPermissionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/push_permission_granted" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/fidLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:labelFor="@id/fidText"
        android:text="@string/label_firebase_id"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/hasPermissionText" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/fidText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        app:layout_constraintTop_toBottomOf="@id/fidLabel"
        tools:text="@tools:sample/lorem/random" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/pushTokenLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:labelFor="@id/pushTokenText"
        android:text="@string/label_push_token"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/fidText" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/pushTokenText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/pushTokenLabel"
        tools:maxLines="5"
        tools:text="@tools:sample/lorem/random" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/permissionButton"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/check_permission"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pushTokenText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/initNotificationButton"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/init_notifications"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/permissionButton" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/delNotificationButton"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/del_notifications"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/initNotificationButton" />

</androidx.constraintlayout.widget.ConstraintLayout>